--- a/index.html
+++ b/index.html
@@ -64,10 +64,9 @@
                     <p>
                         My core strengths are in designing, scaling, and operating production-grade ML systems, with a strong focus on the engineering side of AI. I enjoy working at the intersection of machine learning, software engineering, and cloud infrastructure.
                     </p>
-                    <div class="hiring-box">
-                        <i class="fas fa-rocket"></i>
-                        <span>Actively seeking <strong>Summer 2026 Internships</strong> & Co-ops in MLOps, ML Engineering, and Data Science.</span>
-                    </div>
+                    <p class="hiring-note">
+                        <i class="fas fa-bullhorn"></i> I am actively seeking <strong>Summer 2026 Internships</strong> (May–Aug) and Co-ops (July–Dec) in Machine Learning Engineering, MLOps, and Data Science.
+                    </p>
                 </div>
                 
                 <div class="core-areas">
@@ -127,28 +126,43 @@
                 </div>
 
                 <div class="badge-row">
-                    <h3>MLOps & Cloud</h3>
+                    <h3>MLOps & Workflows</h3>
                     <div class="badge-group">
                         <img src="https://img.shields.io/badge/Ray-028CF0?style=for-the-badge&logo=ray&logoColor=white" alt="Ray">
                         <img src="https://img.shields.io/badge/MLflow-0194E2?style=for-the-badge&logo=mlflow&logoColor=white" alt="MLflow">
                         <img src="https://img.shields.io/badge/DVC-945DD6?style=for-the-badge&logo=dvc&logoColor=white" alt="DVC">
-                        <img src="https://img.shields.io/badge/Kubernetes-326CE5?style=for-the-badge&logo=kubernetes&logoColor=white" alt="Kubernetes">
-                        <img src="https://img.shields.io/badge/Azure-0078D4?style=for-the-badge&logo=microsoft-azure&logoColor=white" alt="Azure">
-                        <img src="https://img.shields.io/badge/AWS-232F3E?style=for-the-badge&logo=amazon-aws&logoColor=white" alt="AWS">
-                        <img src="https://img.shields.io/badge/Docker-2496ED?style=for-the-badge&logo=docker&logoColor=white" alt="Docker">
-                        <img src="https://img.shields.io/badge/Terraform-7B42BC?style=for-the-badge&logo=terraform&logoColor=white" alt="Terraform">
+                        <img src="https://img.shields.io/badge/Argo-DF5A2D?style=for-the-badge&logo=argo&logoColor=white" alt="Argo">
+                        <img src="https://img.shields.io/badge/Azure%20ML-0078D4?style=for-the-badge&logo=microsoft-azure&logoColor=white" alt="Azure ML">
+                        <img src="https://img.shields.io/badge/Prometheus-E6522C?style=for-the-badge&logo=prometheus&logoColor=white" alt="Prometheus">
+                        <img src="https://img.shields.io/badge/Grafana-F46800?style=for-the-badge&logo=grafana&logoColor=white" alt="Grafana">
                     </div>
                 </div>
 
                 <div class="badge-row">
-                    <h3>Tools & Databases</h3>
+                    <h3>Cloud & Infrastructure</h3>
+                    <div class="badge-group">
+                        <img src="https://img.shields.io/badge/Azure-0078D4?style=for-the-badge&logo=microsoft-azure&logoColor=white" alt="Azure">
+                        <img src="https://img.shields.io/badge/AWS-232F3E?style=for-the-badge&logo=amazon-aws&logoColor=white" alt="AWS">
+                        <img src="https://img.shields.io/badge/AKS-326CE5?style=for-the-badge&logo=kubernetes&logoColor=white" alt="AKS">
+                        <img src="https://img.shields.io/badge/Docker-2496ED?style=for-the-badge&logo=docker&logoColor=white" alt="Docker">
+                        <img src="https://img.shields.io/badge/Terraform-7B42BC?style=for-the-badge&logo=terraform&logoColor=white" alt="Terraform">
+                        <img src="https://img.shields.io/badge/Azure%20DevOps-0078D4?style=for-the-badge&logo=azure-devops&logoColor=white" alt="Azure DevOps">
+                        <img src="https://img.shields.io/badge/GitHub%20Actions-2088FF?style=for-the-badge&logo=github-actions&logoColor=white" alt="Actions">
+                        <img src="https://img.shields.io/badge/Linux-FCC624?style=for-the-badge&logo=linux&logoColor=black" alt="Linux">
+                    </div>
+                </div>
+
+                <div class="badge-row">
+                    <h3>Databases & Tools</h3>
                     <div class="badge-group">
                         <img src="https://img.shields.io/badge/ElasticSearch-005571?style=for-the-badge&logo=elasticsearch&logoColor=white" alt="Elastic">
                         <img src="https://img.shields.io/badge/PostgreSQL-316192?style=for-the-badge&logo=postgresql&logoColor=white" alt="Postgres">
                         <img src="https://img.shields.io/badge/MySQL-4479A1?style=for-the-badge&logo=mysql&logoColor=white" alt="MySQL">
                         <img src="https://img.shields.io/badge/MongoDB-47A248?style=for-the-badge&logo=mongodb&logoColor=white" alt="MongoDB">
                         <img src="https://img.shields.io/badge/FastAPI-009688?style=for-the-badge&logo=fastapi&logoColor=white" alt="FastAPI">
+                        <img src="https://img.shields.io/badge/Flask-000000?style=for-the-badge&logo=flask&logoColor=white" alt="Flask">
                         <img src="https://img.shields.io/badge/Streamlit-FF4B4B?style=for-the-badge&logo=streamlit&logoColor=white" alt="Streamlit">
+                        <img src="https://img.shields.io/badge/GitHub-181717?style=for-the-badge&logo=github&logoColor=white" alt="GitHub">
                     </div>
                 </div>
 
@@ -163,7 +177,7 @@
                 
                 <div class="timeline-item">
                     <div class="timeline-logo-wrapper">
-                        <img src="https://upload.wikimedia.org/wikipedia/commons/e/e5/Wisconsin_Badgers_logo.svg" alt="UW Logo">
+                        <img src="https://brand.wisc.edu/content/uploads/2016/11/uw-crest-color-300x300.png" alt="UW Logo">
                     </div>
                     <div class="timeline-content">
                         <span class="date">Jan 2026 - Present</span>
@@ -214,8 +228,8 @@
 
                 <div class="timeline-item">
                     <div class="timeline-logo-wrapper">
-                        <img src="https://upload.wikimedia.org/wikipedia/en/e/ea/PES_University_Logo.png" alt="PES Logo" style="filter: brightness(0) invert(1);"> 
-                        </div>
+                        <img src="https://upload.wikimedia.org/wikipedia/en/e/ea/PES_University_Logo.png" alt="PES Logo">
+                    </div>
                     <div class="timeline-content">
                         <span class="date">Sep 2022 - Dec 2022</span>
                         <h3>Teaching Assistant (Statistics)</h3>
@@ -243,7 +257,7 @@
 
                 <div class="timeline-item">
                     <div class="timeline-logo-wrapper">
-                        <img src="https://upload.wikimedia.org/wikipedia/en/e/ea/PES_University_Logo.png" alt="PES Logo" style="filter: brightness(0) invert(1);">
+                        <img src="https://upload.wikimedia.org/wikipedia/en/e/ea/PES_University_Logo.png" alt="PES Logo">
                     </div>
                     <div class="timeline-content">
                         <span class="date">May 2021 - Dec 2021</span>
@@ -272,6 +286,7 @@
                             <a href="https://github.com/NikhilAdyapak/CodeRuntimeComplexity" target="_blank">Code</a>
                             <a href="https://doi.org/10.1007/978-981-99-7622-5_26" target="_blank">DOI</a>
                             <a href="https://github.com/NikhilAdyapak/Code_Complexity_Training_Experiments" target="_blank">Exp</a>
+                            <a href="https://github.com/NikhilAdyapak/Time_Complexity_Dataset" target="_blank">Dataset</a>
                         </div>
                     </div>
                     <h3>Code Runtime Complexity Prediction</h3>
