--- a/index.html
+++ b/index.html
@@ -22,9 +22,10 @@
             
             <div class="hero-text">
                 <h1>Nikhil Adyapak</h1>
-                <h2 class="tagline">MLOps Specialist • Machine Learning Engineer • Data Engineer</h2>
+                <h2 class="tagline">MLOps Specialist • ML Engineer • Data Science @ UW-Madison</h2>
                 <p class="sub-text">
-                    <strong> I am actively seeking Summer 2026 Internships (May–Aug) and Co-ops (July–Dec) in Machine Learning Engineering, MLOps, and Data Science </strong> .
+                    <strong>Actively seeking Summer 2026 Internships (May–Aug) and Co-ops (July–Dec) in Machine Learning Engineering, MLOps, and Data Science </strong> .
+                    
                     MS Data Science @ <strong>UW-Madison</strong> | Ex-Senior Software Engineer @ <strong>Bosch</strong><br>
                     Building Scalable ML Systems, Cloud Infrastructure & Distributed AI
                 </p>
@@ -171,7 +172,7 @@
         </div>
     </section>
 
-    <section class="section experience" id="experience">
+ <section class="section experience" id="experience">
         <div class="container">
             <h2 class="section-title center">Professional Journey</h2>
             <div class="timeline">
@@ -186,8 +187,8 @@
                         <h4>University of Wisconsin-Madison | Madison, WI</h4>
                         <p class="role-desc">Course: CS 564 - Database Management Systems</p>
                         <ul>
-                            <li>Lead assignment sections and mentor 200+ students in database design, SQL, and Python implementation.</li>
-                            <li>Assist instructors with automated grading pipelines and course logistics.</li>
+                            <li><strong>Lead assignment sections</strong> and mentor <strong>200+ students</strong> in database design, SQL, and Python implementation.</li>
+                            <li>Assist instructors with <strong>automated grading pipelines</strong> and course logistics.</li>
                         </ul>
                     </div>
                 </div>
@@ -204,10 +205,10 @@
                             <span>MLOps</span> <span>Distributed Systems</span> <span>Neural Search</span>
                         </div>
                         <ul>
-                            <li><strong>MLOps as a Service:</strong> Delivered an end-to-end platform (Azure ML + MLflow) for pedestrian detection, enabling multi-GPU training (3x faster) and reducing GPU costs by 60%.</li>
-                            <li><strong>Distributed Training:</strong> Architected a Ray Cluster on AKS, slashing retraining cycles from 4 weeks to 1 week (75% faster) for 30+ teams.</li>
-                            <li><strong>Image Search Engine:</strong> Built a 60M+ image retrieval system (CLIP + ElasticSearch) to discover edge cases, reducing triage time by 95% (4 hrs → 10 mins).</li>
-                            <li><strong>Cost & Security:</strong> Implemented embedding reuse (80% alignment) and deployed secure on-prem LLMs (Ollama) with zero external data egress.</li>
+                            <li><strong>MLOps as a Service:</strong> Delivered an end-to-end platform (Azure ML + MLflow) for pedestrian detection, enabling multi-GPU training (3x faster) and reducing GPU costs by <strong>60%</strong>.</li>
+                            <li><strong>Distributed Training:</strong> Architected a Ray Cluster on AKS, slashing retraining cycles from 4 weeks to 1 week (<strong>75% faster</strong>) for 30+ teams.</li>
+                            <li><strong>Image Search Engine:</strong> Built a <strong>60M+ image retrieval system</strong> (CLIP + ElasticSearch) to discover edge cases, reducing triage time by 95% (4 hrs → 10 mins).</li>
+                            <li><strong>Cost & Security:</strong> Implemented embedding reuse (80% alignment) and deployed secure on-prem LLMs (Ollama) with <strong>zero external data egress</strong>.</li>
                         </ul>
                     </div>
                 </div>
@@ -221,9 +222,9 @@
                         <h3>Machine Learning Operations (MLOps) Intern</h3>
                         <h4>Bosch Global Software Technologies</h4>
                         <ul>
-                            <li>Engineered on-premise pipelines (DVC + MLflow), reducing model setup time from 1 week to 1 day.</li>
-                            <li>Containerized model deployments and built CI/CD workflows for Azure Container Instances (ACI) using GitHub Actions.</li>
-                            <li>Presented MLOps proof-of-concept at the internal Data Engineering Marketplace demonstrating production readiness.</li>
+                            <li>Engineered <strong>on-premise pipelines (DVC + MLflow)</strong>, reducing model setup time from 1 week to 1 day.</li>
+                            <li><strong>Containerized model deployments</strong> and built CI/CD workflows for Azure Container Instances (ACI) using GitHub Actions.</li>
+                            <li>Presented MLOps proof-of-concept at the internal <strong>Data Engineering Marketplace</strong> demonstrating production readiness.</li>
                         </ul>
                     </div>
                 </div>
@@ -237,8 +238,8 @@
                         <h3>Teaching Assistant (Statistics)</h3>
                         <h4>PES University | Bengaluru, India</h4>
                         <ul>
-                            <li>TA for CS203: Statistics for Data Science. Mentored 120+ students and delivered hands-on sessions on Hypothesis Testing and Supervised ML.</li>
-                            <li>Organized and judged departmental hackathons.</li>
+                            <li>TA for <strong>CS203: Statistics for Data Science</strong>. Mentored <strong>120+ students</strong> and delivered hands-on sessions on Hypothesis Testing and Supervised ML.</li>
+                            <li>Organized and judged departmental <strong>hackathons</strong>.</li>
                         </ul>
                     </div>
                 </div>
@@ -252,8 +253,8 @@
                         <h3>Summer Intern</h3>
                         <h4>Bosch Global Software Technologies</h4>
                         <ul>
-                            <li>Designed MLOps pipelines for object detection (YOLOv5, Detectron2) with DVC integration.</li>
-                            <li>Implemented ensemble strategies and automated evaluation reports to improve model robustness.</li>
+                            <li>Designed <strong>MLOps pipelines</strong> for object detection (YOLOv5, Detectron2) with DVC integration.</li>
+                            <li>Implemented <strong>ensemble strategies</strong> and automated evaluation reports to improve model robustness for autonomous driving.</li>
                         </ul>
                     </div>
                 </div>
@@ -267,7 +268,7 @@
                         <h3>Research Intern (Cryptography)</h3>
                         <h4>Center for Information Security (C-ISFCR) | PES University</h4>
                         <ul>
-                            <li>Researched cryptanalysis methods for columnar transposition ciphers using Python & Optimization.</li>
+                            <li>Developed novel <strong>cryptanalysis methods</strong> for columnar transposition ciphers using Python & Optimization.</li>
                             <li>Published findings at <strong>IEEE SMARTGENCON 2022</strong>.</li>
                         </ul>
                     </div>
