--- a/index.html
+++ b/index.html
@@ -24,8 +24,7 @@
                 <h1>Nikhil Adyapak</h1>
                 <h2 class="tagline">MLOps Specialist • ML Engineer • Data Science @ UW-Madison</h2>
                 <p class="sub-text">
-                    <strong>Actively seeking Summer 2026 Internships (May–Aug) and Co-ops (July–Dec) in Machine Learning Engineering, MLOps, and Data Science </strong> .
-                    
+                    <strong>Actively seeking Summer 2026 Internships (May–Aug) and Co-ops (July–Dec) in ML Engineering, MLOps, and Data Science</strong><br>
                     MS Data Science @ <strong>UW-Madison</strong> | Ex-Senior Software Engineer @ <strong>Bosch</strong><br>
                     Building Scalable ML Systems, Cloud Infrastructure & Distributed AI
                 </p>
