updated website --version 3.4.5

--- a/index.html
+++ b/index.html
@@ -327,7 +327,7 @@
                         </div>
                     </div>
                     <h3>Decrypting Transposition Ciphers</h3>
-                    <p>Optimization techniques to break columnar transposition ciphers using NLP (IEEE SmartGenCon).</p>
+                    <p>Optimization techniques to break columnar transposition ciphers using Natural Language (IEEE SmartGenCon).</p>
                     <div class="tech-tags">
                         <img src="https://img.shields.io/badge/Python-3776AB?style=flat&logo=python&logoColor=white" alt="Python">
                         <img src="https://img.shields.io/badge/IEEE-00629B?style=flat&logo=ieee&logoColor=white" alt="IEEE">
