updated website --version 3.4.6

--- a/index.html
+++ b/index.html
@@ -378,7 +378,7 @@
                     <i class="fas fa-trophy"></i>
                     <div>
                         <h3>Top Achiever Award</h3>
-                        <p>Ranked 1st among 150+ engineers in Data Engineering at Bosch (2024).</p>
+                        <p>Ranked 1st among 120+ engineers in Data Engineering at Bosch (2024).</p>
                     </div>
                 </div>
 
@@ -393,15 +393,17 @@
                 <div class="comm-card blue">
                     <i class="fas fa-hands-helping"></i>
                     <div>
-                        <h3>Youth4Jobs Mentor</h3>
-                        <p>Guided candidates with disabilities in tech interviews and taught CS fundamentals.</p>
+                        <span class="vol-tag">BGSW CSR</span>
+                        <h3>Education Advocate</h3>
+                        <p>Guided candidates with disabilities in tech interviews (Youth4Jobs) and taught CS to underprivileged children.</p>
                     </div>
                 </div>
 
                 <div class="comm-card green">
                     <i class="fas fa-leaf"></i>
                     <div>
-                        <h3>Wildlife & Social Initiatives</h3>
+                        <span class="vol-tag">BGSW CSR</span>
+                        <h3>Wildlife & Social</h3>
                         <p>Supported elephant habitat restoration and agricultural initiatives funding stipends for differently-abled individuals.</p>
                     </div>
                 </div>
