updated website --version 3.4.7

--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
                         <span class="date">Jan 2026 - Present</span>
                         <h3>Graduate Teaching Assistant</h3>
                         <h4>University of Wisconsin-Madison | Madison, WI</h4>
-                        <p class="role-desc">Course: CS 564 - Database Management Systems</p>
+                        <p class="role-desc"><strong>Course: CS564 - Database Management Systems</strong></p>
                         <ul>
                             <li><strong>Lead assignment sections</strong> and mentor <strong>200+ students</strong> in database design, SQL, and Python implementation.</li>
                             <li>Assist instructors with <strong>automated grading pipelines</strong> and course logistics.</li>
@@ -198,16 +198,16 @@
                     </div>
                     <div class="timeline-content">
                         <span class="date">Aug 2023 - Aug 2025</span>
-                        <h3>Senior Software Engineer (AI/ADAS)</h3>
+                        <h3>Senior Software Engineer (AI Systems for Advance Driver Assisted Systems (ADAS)</h3>
                         <h4>Bosch Global Software Technologies | Bengaluru, India</h4>
                         <div class="tags">
-                            <span>MLOps</span> <span>Distributed Systems</span> <span>Neural Search</span>
+                            <span>MLOps</span> <span>Distributed Systems</span> <span>Image Data Search</span>
                         </div>
                         <ul>
                             <li><strong>MLOps as a Service:</strong> Delivered an end-to-end platform (Azure ML + MLflow) for pedestrian detection, enabling multi-GPU training (3x faster) and reducing GPU costs by <strong>60%</strong>.</li>
-                            <li><strong>Distributed Training:</strong> Architected a Ray Cluster on AKS, slashing retraining cycles from 4 weeks to 1 week (<strong>75% faster</strong>) for 30+ teams.</li>
-                            <li><strong>Image Search Engine:</strong> Built a <strong>60M+ image retrieval system</strong> (CLIP + ElasticSearch) to discover edge cases, reducing triage time by 95% (4 hrs → 10 mins).</li>
-                            <li><strong>Cost & Security:</strong> Implemented embedding reuse (80% alignment) and deployed secure on-prem LLMs (Ollama) with <strong>zero external data egress</strong>.</li>
+                            <li><strong>Distributed Training:</strong> Architected a Ray Cluster on AKS, slashing retraining cycles from 4 weeks to 1 week (<strong>75% faster</strong>) for <strong>30+</strong> teams.</li>
+                            <li><strong>Image Search Engine:</strong> Built a <strong>60M+ image retrieval system</strong> (CLIP + ElasticSearch) to discover edge cases, reducing triage time by <strong>95% (4 hrs → 10 mins)</strong>.</li>
+                            <li><strong>Cost & Security:</strong> Implemented CLIP embedding reuse (80% alignment). Deployed secure on-prem LLMs (Ollama) with <strong>zero external data egress</strong>.</li>
                         </ul>
                     </div>
                 </div>
@@ -221,7 +221,7 @@
                         <h3>Machine Learning Operations (MLOps) Intern</h3>
                         <h4>Bosch Global Software Technologies</h4>
                         <ul>
-                            <li>Engineered <strong>on-premise pipelines (DVC + MLflow)</strong>, reducing model setup time from 1 week to 1 day.</li>
+                            <li>Engineered <strong>on-premise pipelines (DVC + MLflow)</strong>, reducing model setup time from <strong>1 week</strong> to <strong>1 day</strong>.</li>
                             <li><strong>Containerized model deployments</strong> and built CI/CD workflows for Azure Container Instances (ACI) using GitHub Actions.</li>
                             <li>Presented MLOps proof-of-concept at the internal <strong>Data Engineering Marketplace</strong> demonstrating production readiness.</li>
                         </ul>
@@ -236,8 +236,9 @@
                         <span class="date">Sep 2022 - Dec 2022</span>
                         <h3>Teaching Assistant (Statistics)</h3>
                         <h4>PES University | Bengaluru, India</h4>
+                        <p class="role-desc"><strong>Course: CS203: Statistics for Data Science</strong></p>
                         <ul>
-                            <li>TA for <strong>CS203: Statistics for Data Science</strong>. Mentored <strong>120+ students</strong> and delivered hands-on sessions on Hypothesis Testing and Supervised ML.</li>
+                            <li>Mentored <strong>120+ students</strong> and delivered hands-on sessions on Hypothesis Testing and Supervised ML.</li>
                             <li>Organized and judged departmental <strong>hackathons</strong>.</li>
                         </ul>
                     </div>
@@ -377,6 +378,7 @@
                 <div class="comm-card gold">
                     <i class="fas fa-trophy"></i>
                     <div>
+                        <span class="vol-tag">BGSW</span>
                         <h3>Top Achiever Award</h3>
                         <p>Ranked 1st among 120+ engineers in Data Engineering at Bosch (2024).</p>
                     </div>
@@ -385,6 +387,7 @@
                 <div class="comm-card gold">
                     <i class="fas fa-microphone-alt"></i>
                     <div>
+                        <span class="vol-tag">BGSW</span>
                         <h3>Best Presenter Award</h3>
                         <p>Recognized for technical excellence at the Bosch Data Engineering Dept Meeting (2024).</p>
                     </div>
@@ -411,8 +414,9 @@
                 <div class="comm-card blue">
                     <i class="fas fa-university"></i>
                     <div>
+                        <span class="vol-tag">PES University</span>
                         <h3>Distinction Award & Scholarship</h3>
-                        <p>PES University (Semesters 3-6). MRD Scholarship (Top 20% of 1100+ students).</p>
+                        <p>Distinction Award (Semesters 3-6). <br> MRD Scholarship (40% tuition scholarship for Top 20% of 1100+ students).</p>
                     </div>
                 </div>
 
