updated website --version 3.4.8

--- a/index.html
+++ b/index.html
@@ -42,6 +42,9 @@
                     <a href="mailto:nikhiladyapak31@gmail.com" class="social-btn email">
                         <i class="fas fa-envelope"></i> <span>Email</span>
                     </a>
+                    <a href="NIKHIL_ADYAPAK_CV.pdf" target="_blank" class="social-btn cv">
+                        <i class="fas fa-file-alt"></i> <span>CV</span>
+                    </a>
                     <a href="NIKHIL_ADYAPAK_resume.pdf" target="_blank" class="social-btn resume">
                         <i class="fas fa-file-pdf"></i> <span>Resume</span>
                     </a>
@@ -99,7 +102,7 @@
 
     <section class="section skills-section">
         <div class="container">
-            <h2 class="section-title center">Technical Arsenal</h2>
+            <h2 class="section-title center">Technical Skills</h2>
             <div class="badges-wrapper">
                 
                 <div class="badge-row">
@@ -374,6 +377,15 @@
         <div class="container">
             <h2 class="section-title center">Beyond Code</h2>
             <div class="community-grid">
+
+                <div class="comm-card purple">
+                    <i class="fas fa-chalkboard-teacher"></i>
+                    <div>
+                        <span class="vol-tag">UW Madison</span>
+                        <h3>Research Communicator (3MT)</h3>
+                        <p>Competed in UW-Madison's <strong>3 Minute Thesis</strong>, distilling complex research on autonomous driving corner cases for a non-technical audience.</p>
+                    </div>
+                </div>
                 
                 <div class="comm-card gold">
                     <i class="fas fa-trophy"></i>
