updated website --version 3.4.9

--- a/index.html
+++ b/index.html
@@ -11,6 +11,16 @@
 </head>
 <body>
 
+<nav class="navbar">
+    <ul class="nav-links">
+        <li><a href="#about">About</a></li>
+        <li><a href="#experience">Experience</a></li>
+        <li><a href="#projects">Projects</a></li>
+        <li><a href="NIKHIL_ADYAPAK_CV.pdf" target="_blank" class="nav-btn cv-btn">CV</a></li>
+        <li><a href="NIKHIL_ADYAPAK_resume.pdf" target="_blank" class="nav-btn">Resume</a></li>
+    </ul>
+</nav>
+
     <header class="hero">
         
         <div class="container hero-content">
@@ -437,7 +447,7 @@
     </section>
 
     <footer>
-        <p>&copy; 2026 Nikhil Adyapak. Engineered with <i class="fas fa-code" style="color: var(--accent);"></i></p>
+        <p>&copy; <span id="year"></span> Nikhil Adyapak. Engineered with <i class="fas fa-code" style="color: var(--accent);"></i></p>
     </footer>
 
     <script src="assets/js/main.js"></script>
