updated website --version 3.4.10

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Portfolio of Nikhil Adyapak - MS Data Science Student at UW-Madison and MLOps Engineer. Specializing in Distributed Systems, Computer Vision, and Scalable AI.">
     <title>Nikhil Adyapak | MLOps & Data Science</title>
     <link rel="stylesheet" href="assets/css/style.css">
     <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@300;400;500;700;800&family=JetBrains+Mono:wght@400;500&display=swap" rel="stylesheet">
@@ -16,8 +17,8 @@
         <li><a href="#about">About</a></li>
         <li><a href="#experience">Experience</a></li>
         <li><a href="#projects">Projects</a></li>
-        <li><a href="NIKHIL_ADYAPAK_CV.pdf" target="_blank" class="nav-btn cv-btn">CV</a></li>
-        <li><a href="NIKHIL_ADYAPAK_resume.pdf" target="_blank" class="nav-btn">Resume</a></li>
+        <li><a href="NIKHIL_ADYAPAK_CV.pdf" target="noopener noreferrer" class="nav-btn cv-btn">CV</a></li>
+        <li><a href="NIKHIL_ADYAPAK_resume.pdf" target="noopener noreferrer" class="nav-btn">Resume</a></li>
     </ul>
 </nav>
 
@@ -40,22 +41,22 @@
                 </p>
                 
                 <div class="contact-bar">
-                    <a href="https://linkedin.com/in/nikhil-adyapak" target="_blank" class="social-btn linkedin">
+                    <a href="https://linkedin.com/in/nikhil-adyapak" target="noopener noreferrer" class="social-btn linkedin">
                         <i class="fab fa-linkedin"></i> <span>LinkedIn</span>
                     </a>
-                    <a href="https://github.com/NikhilAdyapak" target="_blank" class="social-btn github">
+                    <a href="https://github.com/NikhilAdyapak" target="noopener noreferrer" class="social-btn github">
                         <i class="fab fa-github"></i> <span>GitHub</span>
                     </a>
-                    <a href="https://scholar.google.com/citations?hl=en&user=VAOBlIMAAAAJ" target="_blank" class="social-btn scholar">
+                    <a href="https://scholar.google.com/citations?hl=en&user=VAOBlIMAAAAJ" target="noopener noreferrer" class="social-btn scholar">
                         <i class="fas fa-graduation-cap"></i> <span>Scholar</span>
                     </a>
                     <a href="mailto:nikhiladyapak31@gmail.com" class="social-btn email">
                         <i class="fas fa-envelope"></i> <span>Email</span>
                     </a>
-                    <a href="NIKHIL_ADYAPAK_CV.pdf" target="_blank" class="social-btn cv">
+                    <a href="NIKHIL_ADYAPAK_CV.pdf" target="noopener noreferrer" class="social-btn cv">
                         <i class="fas fa-file-alt"></i> <span>CV</span>
                     </a>
-                    <a href="NIKHIL_ADYAPAK_resume.pdf" target="_blank" class="social-btn resume">
+                    <a href="NIKHIL_ADYAPAK_resume.pdf" target="noopener noreferrer" class="social-btn resume">
                         <i class="fas fa-file-pdf"></i> <span>Resume</span>
                     </a>
                 </div>
@@ -300,10 +301,10 @@
                     <div class="card-head">
                         <i class="fas fa-code-branch icon"></i>
                         <div class="links">
-                            <a href="https://github.com/NikhilAdyapak/CodeRuntimeComplexity" target="_blank">Code</a>
-                            <a href="https://doi.org/10.1007/978-981-99-7622-5_26" target="_blank">DOI</a>
-                            <a href="https://github.com/NikhilAdyapak/Code_Complexity_Training_Experiments" target="_blank">Exp</a>
-                            <a href="https://github.com/NikhilAdyapak/Time_Complexity_Dataset" target="_blank">Dataset</a>
+                            <a href="https://github.com/NikhilAdyapak/CodeRuntimeComplexity" target="noopener noreferrer">Code</a>
+                            <a href="https://doi.org/10.1007/978-981-99-7622-5_26" target="noopener noreferrer">DOI</a>
+                            <a href="https://github.com/NikhilAdyapak/Code_Complexity_Training_Experiments" target="noopener noreferrer">Exp</a>
+                            <a href="https://github.com/NikhilAdyapak/Time_Complexity_Dataset" target="noopener noreferrer">Dataset</a>
                         </div>
                     </div>
                     <h3>Code Runtime Complexity Prediction</h3>
@@ -319,8 +320,8 @@
                     <div class="card-head">
                         <i class="fas fa-project-diagram icon"></i>
                         <div class="links">
-                            <a href="https://github.com/NikhilAdyapak/DVC_Detectron2" target="_blank">DVC Pipeline</a>
-                            <a href="https://github.com/NikhilAdyapak/MLOps_Pipeline" target="_blank">Detection</a>
+                            <a href="https://github.com/NikhilAdyapak/DVC_Detectron2" target="noopener noreferrer">DVC Pipeline</a>
+                            <a href="https://github.com/NikhilAdyapak/MLOps_Pipeline" target="noopener noreferrer">Detection</a>
                         </div>
                     </div>
                     <h3>MLOps Pipeline for Pedestrian Detection</h3>
@@ -336,8 +337,8 @@
                     <div class="card-head">
                         <i class="fas fa-lock icon"></i>
                         <div class="links">
-                            <a href="https://github.com/NikhilAdyapak/SingleColumnarTranspositionKeylessDecryption" target="_blank">View Repo</a>
-                            <a href="https://doi.org/10.1109/SMARTGENCON56628.2022.10083631" target="_blank">DOI Link</a>
+                            <a href="https://github.com/NikhilAdyapak/SingleColumnarTranspositionKeylessDecryption" target="noopener noreferrer">View Repo</a>
+                            <a href="https://doi.org/10.1109/SMARTGENCON56628.2022.10083631" target="noopener noreferrer">DOI Link</a>
                         </div>
                     </div>
                     <h3>Decrypting Transposition Ciphers</h3>
@@ -393,7 +394,7 @@
                     <div>
                         <span class="vol-tag">UW Madison</span>
                         <h3>Research Communicator (3MT)</h3>
-                        <p>Competed in UW-Madison's <strong>3 Minute Thesis</strong>, distilling complex research on autonomous driving corner cases for a non-technical audience.</p>
+                        <p>Competed in UW-Madison's <strong>3 Minute Thesis</strong>, distilling complex research on autonomous driving corner cases for a non-technical audience (2025).</p>
                     </div>
                 </div>
                 
@@ -420,7 +421,7 @@
                     <div>
                         <span class="vol-tag">BGSW CSR</span>
                         <h3>Education Advocate</h3>
-                        <p>Guided candidates with disabilities in tech interviews (Youth4Jobs) and taught CS to underprivileged children.</p>
+                        <p>Guided candidates with disabilities in tech interviews (Youth4Jobs) and taught CS to underprivileged children (2023-2025).</p>
                     </div>
                 </div>
 
@@ -429,7 +430,7 @@
                     <div>
                         <span class="vol-tag">BGSW CSR</span>
                         <h3>Wildlife & Social</h3>
-                        <p>Supported elephant habitat restoration and agricultural initiatives funding stipends for differently-abled individuals.</p>
+                        <p>Supported elephant habitat restoration and agricultural initiatives funding stipends for differently-abled individuals (2025).</p>
                     </div>
                 </div>
 
@@ -438,7 +439,7 @@
                     <div>
                         <span class="vol-tag">PES University</span>
                         <h3>Distinction Award & Scholarship</h3>
-                        <p>Distinction Award (Semesters 3-6). <br> MRD Scholarship (40% tuition scholarship for Top 20% of 1100+ students).</p>
+                        <p>Distinction Award (Semesters 3-6) (2020-2022) . <br> MRD Scholarship (40% tuition scholarship for Top 20% of 1100+ students) (2020).</p>
                     </div>
                 </div>
 
