updated website --version 3.4.13

--- a/index.html
+++ b/index.html
@@ -45,7 +45,8 @@
             
             <div class="hero-text">
                 <h1>Nikhil Adyapak</h1>
-                <h2 class="tagline">MLOps Specialist • ML Engineer • Data Science @ UW-Madison <span class="typewriter"></span></h2>
+                <h2 class="tagline">MLOps Specialist • ML Engineer • Data Science @ UW-Madison </h2>
+                <h2 class="tagline"> I build <span class="typewriter"></span></h2>
                 <p class="sub-text">
                     <strong>Actively seeking Summer 2026 Internships (May–Aug) and Co-ops (July–Dec) in ML Engineering, MLOps, and Data Science</strong><br>
                     MS Data Science @ <strong>UW-Madison</strong> | Ex-Senior Software Engineer @ <strong>Bosch</strong><br>
