updated website --version 3.5.2

--- a/index.html
+++ b/index.html
@@ -52,8 +52,7 @@
                 
                 <p class="sub-text">
                     <strong>Actively seeking Summer 2026 Internships (May–Aug) and Co-ops (July–Dec) in ML Engineering, MLOps, and Data Science</strong><br>
-                    MS Data Science @ <strong>UW-Madison</strong> | Ex-Senior Software Engineer @ <strong>Bosch</strong><br>
-                    Building Scalable ML Systems, Cloud Infrastructure & Distributed AI
+                    MS Data Science @ <strong>UW-Madison</strong> | Ex-Senior Software Engineer @ <strong>Bosch</strong>
                 </p>
                 
                 <div class="contact-bar">
